# foneOS

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Edison.cmake  FindSDL2.cmake  FindSqlite3.cmake  README.md  foneOS.sln  wercker.yml
build_scripts/: create_app_bundle.sh
build_scripts/bundle_part.app/Contents/Resources/: foneOS.icns
build_scripts/foneOS.app/Contents/: Info.plist
build_scripts/foneOS.app/Contents/MacOS/: foneOS
cmake/: FindFreeType.cmake  FindLuaJIT.cmake  FindMraa.cmake  FindSqlite3.cmake
foneOS/: App.cpp  App.h  AppManager.cpp  AppManager.h  CMakeLists.txt  Core.cpp  Core.h  Database.cpp  Database.h  Device.cpp  Device.h  Display.cpp  Display.h  Display_ILI9341.cpp  Display_SDL.cpp  Display_ST7781R.cpp  FoneOSColor.cpp  FoneOSColor.h  FoneOSConfig.h  FoneOSConfig.h.in  FoneOSPoint.cpp  FoneOSPoint.h  HardwareManager.cpp  HardwareManager.h  Input.cpp  Input.h  Layout.cpp  Layout.h  Logging.cpp  Logging.h  LuaCustomTypes.hpp  LuaLayout.cpp  LuaLayout.h  Modem.cpp  Modem.h  ReadMe.txt  Storage.cpp  Storage.h  TouchInput.cpp  TouchInput.h  (+17 more)
